# InputWindowAi

./: .env.example  .gitignore  AssistantConversation.py  README.md  WindowProgramm.py  pyproject.toml
src/inputwindowai/: __init__.py  __main__.py  assistant_conversation.py  audio_generator.py  instructions.py  window_programm.py
