[project]
name = "inputwindowai"
version = "0.0.1"
description = "Add your description here"
authors = [
    { name = "LuckySanpedro", email = "contact@your.email" }
]
dependencies = [
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "pyqt5>=5.15.10",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.5",
    "mypy>=1.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true
